--- a/.github/workflows/publisher_game.yml
+++ b/.github/workflows/publisher_game.yml
@@ -13,8 +13,8 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up GCC
-      uses: egor-tensin/setup-gcc@v1
+    - name: Set up MinGW
+      uses: egor-tensin/setup-mingw@v1
 
     - name: Run build script
       run: scripts\run.bat
