--- a/.github/workflows/publisher_game.yml
+++ b/.github/workflows/publisher_game.yml
@@ -15,6 +15,13 @@ jobs:
 
     - name: Set up MinGW
       uses: egor-tensin/setup-mingw@v1
+      with:
+        architecture: x86_64
+
+    - name: Remove missing libpthread.dll.a file
+      run: |
+        $ErrorActionPreference = 'Continue'
+        Remove-Item "C:\ProgramData\chocolatey\lib\mingw\tools\install\mingw64\x86_64-w64-mingw32\lib\libpthread.dll.a" -ErrorAction SilentlyContinue
 
     - name: Run build script
       run: scripts\run.bat
