--- a/.github/workflows/publisher_game.yml
+++ b/.github/workflows/publisher_game.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up MinGW
-      uses: egor-tensin/setup-mingw@v1
+      uses: choco install mingw -y
 
     - name: Run build script
       run: scripts\run.bat
