chore: refactor build script to use compiler.bat instead of run.bat

--- a/.github/workflows/publisher_game.yml
+++ b/.github/workflows/publisher_game.yml
@@ -22,7 +22,7 @@ jobs:
         g++ --version
 
     - name: Run build script
-      run: scripts\run.bat
+      run: scripts\compiler.bat
 
     - name: Upload compiled game
       uses: actions/upload-artifact@v3
