--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
     "allegro_primitives.h": "c",
     "sound.h": "c",
     "helper.h": "c",
-    "allegro_image.h": "c"
+    "allegro_image.h": "c",
+    "protagonista.h": "c"
   },
   "editor.tabSize": 2,
 }
