--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "allegro_image.h": "c",
     "protagonista.h": "c",
     "enemies.h": "c",
+    "components.h": "c"
   },
   "editor.tabSize": 2,
 }
